--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="show_live_perms_leak_tip" >缺少直播需要的权限，是否重新申请？</string>
     <string name="show_live_yes">Yes</string>
     <string name="show_live_no">No</string>
+    <string name="show_text_input_sent">发送</string>
+    <string name="show_text_input_hint">请输入...</string>
+    <string name="show_text_input_empty">文本为空</string>
 </resources>
