[ShowLive][Android]add dialogs including setting, beauty, picture quality, beauty.

--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -14,4 +14,33 @@
     <string name="show_text_input_sent">发送</string>
     <string name="show_text_input_hint">请输入...</string>
     <string name="show_text_input_empty">文本为空</string>
+    <string name="show_setting_switch_camera">翻转镜头</string>
+    <string name="show_setting_video_on">摄像头开</string>
+    <string name="show_setting_video_off">摄像头关</string>
+    <string name="show_setting_mic_on">麦克风开</string>
+    <string name="show_setting_mic_off">麦克风关</string>
+    <string name="show_setting_statistic">实时数据</string>
+    <string name="show_setting_quality">画质</string>
+    <string name="show_setting_advance_setting">高级设置</string>
+    <string name="show_picture_quality_title">画质选择</string>
+    <string name="show_picture_quality_1080p">1080P\n极清</string>
+    <string name="show_picture_quality_720p">720P\n超清</string>
+    <string name="show_picture_quality_540p">540P\n高清</string>
+    <string name="show_picture_quality_360p">360P\n标准</string>
+    <string name="show_picture_quality_270p">270P\n流畅</string>
+    <string name="show_picture_quality_180p">180P\n低清</string>
+    <string name="show_beauty_group_beauty">美颜</string>
+    <string name="show_beauty_item_none">无</string>
+    <string name="show_beauty_item_beauty_smooth">磨皮</string>
+    <string name="show_music_effect_title">音乐特效</string>
+    <string name="show_music_effect_background">背景音乐</string>
+    <string name="show_music_effect_voice">美声</string>
+    <string name="show_music_effect_mixing">混响</string>
+    <string name="show_music_effect_back_music_joy">欢乐</string>
+    <string name="show_music_effect_back_music_romantic">浪漫</string>
+    <string name="show_music_effect_back_music_joy2">欢乐2</string>
+    <string name="show_music_effect_beauty_voice_original">原声</string>
+    <string name="show_music_effect_beauty_voice_sweet">甜美</string>
+    <string name="show_music_effect_mixing_ktv">KTV</string>
+    <string name="show_music_effect_mixing_concert">演唱会</string>
 </resources>
