[Android]Integrated bytedance beauty sdk.

--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -52,4 +52,33 @@
     <string name="show_live_prepare_room_empty">房间名不能为空！</string>
     <string name="show_live_prepare_room_clipboard_copyed">房间ID已复制到剪切板！</string>
     <string name="show_live_prepare_room_name_hint">请输入房间名称</string>
+    <string name="show_beauty_item_beauty_whiten">美白</string>
+    <string name="show_beauty_item_beauty_overall">瘦脸</string>
+    <string name="show_beauty_item_beauty_cheekbone">瘦歡骨</string>
+    <string name="show_beauty_item_beauty_eye">大眼</string>
+    <string name="show_beauty_item_beauty_nose">瘦鼻</string>
+    <string name="show_beauty_item_beauty_chin">下巴</string>
+    <string name="show_beauty_item_beauty_jawbone">下颌骨</string>
+    <string name="show_beauty_item_beauty_forehead">额头</string>
+    <string name="show_beauty_item_beauty_mouth">嘴型</string>
+    <string name="show_beauty_item_beauty_teeth">美牙</string>
+    <string name="show_beauty_group_filter">滤镜</string>
+    <string name="show_beauty_group_effect">特效</string>
+    <string name="show_beauty_group_sticker">贴纸</string>
+    <string name="show_beauty_item_filter_cream">奶油</string>
+    <string name="show_beauty_item_filter_mokalong">马卡龙</string>
+    <string name="show_beauty_item_filter_oxgen">氧气</string>
+    <string name="show_beauty_item_filter_wuyu">物语</string>
+    <string name="show_beauty_item_filter_po9">海边人物</string>
+    <string name="show_beauty_item_filter_lolita">洛丽塔</string>
+    <string name="show_beauty_item_filter_mitao">蜜桃</string>
+    <string name="show_beauty_item_filter_yinhua">樱花</string>
+    <string name="show_beauty_item_filter_beihaidao">北海道</string>
+    <string name="show_beauty_item_filter_s3">旅途</string>
+    <string name="show_beauty_item_effect_baixi">白皙</string>
+    <string name="show_beauty_item_effect_tianmei">甜美</string>
+    <string name="show_beauty_item_effect_cwei">C位</string>
+    <string name="show_beauty_item_effect_yuanqi">元气</string>
+    <string name="show_beauty_item_sticker_biti">鼻涕</string>
+    <string name="show_beauty_item_sticker_zhounian">周年狂欢</string>
 </resources>
