[ShowLive][Android]add advance setting.

--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -112,4 +112,43 @@
     <string name="show_pking">正在pk</string>
     <string name="show_empty_online_boardcaster">暂无在线主播</string>
     <string name="show_empty_online_audience">暂无在线观众</string>
+    <string name="show_setting_preset">预设</string>
+    <string name="show_setting_advance_video_setting">视频设置</string>
+    <string name="show_setting_advance_audio_setting">音频设置</string>
+    <string name="show_setting_advance_quality_enhance">画质增强</string>
+    <string name="show_setting_advance_ok">OK</string>
+    <string name="show_setting_confirm">确认</string>
+    <string name="show_setting_preset_title">推荐场景配置</string>
+    <string name="show_setting_advance_quality_enhance_tip">打开开关后，将使用一系列画质提升策略，包含但不限于h265的编码技术，主要保证在同等码率下，提升画质体验</string>
+    <string name="show_setting_advance_color_enhance">色彩增强</string>
+    <string name="show_setting_advance_color_enhance_tip">打开该开关后，将自动调整视频画面的色彩饱和度，使得画面色彩更加鲜明逼真，提升视觉主观感受</string>
+    <string name="show_setting_advance_dark_enhance">暗光增强</string>
+    <string name="show_setting_advance_dark_enhance_tip">打开该开关后，将自动对暗光下的图像进行处理，通过智能补光等措施增加一定的清晰度和亮度，最终实现图像质量提升</string>
+    <string name="show_setting_advance_video_noise_reduce">视频降噪</string>
+    <string name="show_setting_advance_video_noise_reduce_tip">打开该开关后，将自动去除视频中的噪点，使视频画面看起来更加的清晰</string>
+    <string name="show_setting_advance_bitrate_save">码率节省</string>
+    <string name="show_setting_advance_bitrate_save_tip">打开开关后，将自动实现在同等画质情况下降低码率的效果</string>
+    <string name="show_setting_advance_resolution">分辨率</string>
+    <string name="show_setting_advance_bitrate">码率</string>
+    <string name="show_setting_advance_ear_back">耳返</string>
+    <string name="show_setting_advance_ear_back_tip">耳返</string>
+    <string name="show_setting_advance_vocal_volume">人声音量</string>
+    <string name="show_setting_advance_music_volume">音乐音量</string>
+    <string name="show_bottom_list_cancel">取消</string>
+    <string name="show_setting_advance_framerate">帧率</string>
+    <string name="show_setting_preset_show_title">秀场模式</string>
+    <string name="show_setting_preset_show_description">主播通常采用上半身坐姿开展聊天对话为主的直播形式，画面主要展现主播的妆容和上装穿搭，以低频动作为主</string>
+    <string name="show_setting_preset_device_low">低端机</string>
+    <string name="show_setting_preset_device_medium">中端机</string>
+    <string name="show_setting_preset_device_high">高端机</string>
+    <string name="show_setting_preset_device_low_des">CPU高通400及以下</string>
+    <string name="show_setting_preset_device_medium_des">CPU高通700及以下</string>
+    <string name="show_setting_preset_device_high_des">CPU高通800及以上</string>
+    <string name="show_setting_preset_recommend">推荐</string>
+    <string name="show_setting_preset_no_choise_tip">请选择预设模式</string>
+    <string name="show_tip">提示</string>
+    <string name="show_setting_advance_preset_mode">当前处于\"秀场模式\"最佳效果配置，修改参数后视频体验将改变</string>
+    <string name="show_setting_cancel">取消</string>
+    <string name="show_setting_preset_done">已更新到\"秀场模式\"最佳配置</string>
+    <string name="show_setting_audience">观众设置</string>
 </resources>
