--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -81,6 +81,8 @@
     <string name="show_beauty_item_effect_yuanqi">元气</string>
     <string name="show_beauty_item_sticker_biti">鼻涕</string>
     <string name="show_beauty_item_sticker_zhounian">周年狂欢</string>
+    <string name="show_beauty_item_sticker_huahua">花花</string>
+    <string name="show_beauty_item_sticker_wochaotian">我超甜</string>
     <string name="show_statistic_bitrate">码率: %s kbps</string>
     <string name="show_statistic_fps">帧率: %s fps</string>
     <string name="show_statistic_delay">延迟: %s ms</string>
