--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="show_is_onseat">已上麦</string>
     <string name="show_reject_onseat">已拒绝</string>
     <string name="show_audience_settings">观众设置</string>
+    <string name="show_can_apply">可申请连麦</string>
 
     <!-- pk   -->
     <string name="show_online_boardcaster">在线主播</string>
@@ -117,6 +118,13 @@
     <string name="show_empty_online_boardcaster">暂无在线主播</string>
     <string name="show_empty_online_audience">暂无在线观众</string>
     <string name="show_pk">连线互动</string>
+    <string name="show_can_pk">可邀请PK</string>
+
+    <string name="show_cannot_accept">正在互动， 请互动结束后再接受连麦申请</string>
+    <string name="show_cannot_invite">正在互动， 请互动结束后再邀请观众连麦</string>
+    <string name="show_cannot_apply">正在互动， 请互动结束后再申请连麦</string>
+    <string name="show_ask_for_link">主播邀请你加入连麦</string>
+    <string name="show_ask_for_pk">主播邀请你视频连线</string>
 
 
 
