--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -123,8 +123,8 @@
     <string name="show_cannot_accept">正在互动， 请互动结束后再接受连麦申请</string>
     <string name="show_cannot_invite">正在互动， 请互动结束后再邀请观众连麦</string>
     <string name="show_cannot_apply">正在互动， 请互动结束后再申请连麦</string>
-    <string name="show_ask_for_link">主播邀请你加入连麦</string>
-    <string name="show_ask_for_pk">主播邀请你视频连线</string>
+    <string name="show_ask_for_link">主播 %s 邀请你加入连麦</string>
+    <string name="show_ask_for_pk">主播 %s 邀请你视频连线</string>
 
     <string name="show_content">检测到您有色情元素</string>
 
