--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="show_cannot_apply">正在互动， 请互动结束后再申请连麦</string>
     <string name="show_ask_for_link">主播 %s 邀请你加入连麦</string>
     <string name="show_ask_for_pk">主播 %s 邀请你视频连线</string>
+    <string name="show_count_time_for_pk">PK 0%s:%s</string>
 
     <string name="show_content">检测到您有色情元素</string>
 
