--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -121,7 +121,7 @@
     <string name="show_pk">连线互动</string>
     <string name="show_can_pk">可邀请PK</string>
 
-    <string name="show_content">检测到您有色情元素</string>
+    <string name="show_content">监测到当前内容存在违规行为</string>
 
     <string name="show_cannot_accept">正在互动， 请互动结束后再接受连麦申请</string>
     <string name="show_cannot_invite">正在互动， 请互动结束后再邀请观众连麦</string>
