--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="show_ask_for_pk">主播 %s 邀请你视频连线</string>
     <string name="show_count_time_for_pk">PK 0%s:%s</string>
 
-    <string name="show_content">检测到您有色情元素</string>
+    <string name="show_content">监测到当前内容存在违规行为</string>
 
 
 
