--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -174,4 +174,9 @@
     <string name="show_live_end_room_or_not">是否结束直播?</string>
     <string name="show_setting_opened">已打开</string>
     <string name="show_setting_closed">已关闭</string>
+    <string name="show_setting_preset_audience_title">观众看播前设置</string>
+    <string name="show_setting_preset_audience_enhance_title">画质增强模式</string>
+    <string name="show_setting_preset_audience_enhance_description">针对不同机型适配了对应的画质增强策略</string>
+    <string name="show_setting_preset_audience_basic_title">基础模式</string>
+    <string name="show_setting_preset_audience_basic_description">基础模式</string>
 </resources>
