--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="show_beauty_item_beauty_mouth">嘴型</string>
     <string name="show_beauty_item_beauty_teeth">美牙</string>
     <string name="show_beauty_group_filter">滤镜</string>
-    <string name="show_beauty_group_effect">特效</string>
+    <string name="show_beauty_group_effect">风格妆</string>
     <string name="show_beauty_group_sticker">贴纸</string>
     <string name="show_beauty_item_filter_cream">奶油</string>
     <string name="show_beauty_item_filter_mokalong">马卡龙</string>
