--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="show_audience_settings">观众设置</string>
     <string name="show_can_apply">可申请连麦</string>
     <string name="show_link_is_stopped">连麦已断开哦</string>
+    <string name="show_interacting">互动中</string>
 
 
     <!-- pk   -->
