--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -195,4 +195,7 @@
     <string name="show_beauty_item_beauty_bright_eye">亮眼</string>
     <string name="show_beauty_item_beauty_remove_dark_circles">祛黑眼圈</string>
     <string name="show_beauty_item_beauty_remove_nasolabial_folds">祛法令纹</string>
+    <string name="show_beauty_group_virtual_bg">背景</string>
+    <string name="show_beauty_item_virtual_bg_blur">模糊</string>
+    <string name="show_beauty_item_virtual_bg_mitao">蜜桃</string>
 </resources>
