--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -137,10 +137,12 @@
     <string name="show_setting_advance_video_setting">视频设置</string>
     <string name="show_setting_advance_audio_setting">音频设置</string>
     <string name="show_setting_advance_quality_enhance">画质增强</string>
+    <string name="show_setting_advance_quality_h265">H265</string>
     <string name="show_setting_advance_ok">OK</string>
     <string name="show_setting_confirm">确认</string>
     <string name="show_setting_preset_title">画质推荐配置</string>
     <string name="show_setting_advance_quality_enhance_tip">打开开关后，将使用一系列画质提升策略，包含但不限于h265的编码技术，主要保证在同等码率下，提升画质体验</string>
+    <string name="show_setting_advance_quality_h265_tip">打开开关后，将使用一系列画质提升策略，包含但不限于h265的编码技术，主要保证在同等码率下，提升高</string>
     <string name="show_setting_advance_color_enhance">色彩增强</string>
     <string name="show_setting_advance_color_enhance_tip">打开该开关后，将自动调整视频画面的色彩饱和度，使得画面色彩更加鲜明逼真，提升视觉主观感受</string>
     <string name="show_setting_advance_dark_enhance">暗光增强</string>
