--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -174,3 +174,4 @@
 improve your singing effect. It is strongly recommended that you turn it on when singing";
 "AGC_desc" = "After it is turned on, the volume of your singing will be automatically adjusted to perfectly match the accompaniment volume. It is recommended that you turn it on when you sing";
 "Personal audio Settings" = "Personal audio Settings";
+"Best Agora Sound" = "Agora Sound Selection";
