--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="show_setting_statistic">实时数据</string>
     <string name="show_setting_quality">画质</string>
     <string name="show_setting_advance_setting">高级设置</string>
+    <string name="show_setting_quality_enhance_tip">由于您的机型选择为低端机，为保障设备流畅运行，已关闭画质增强功能</string>
     <string name="show_picture_quality_title">画质选择</string>
     <string name="show_picture_quality_1080p">1080P\n极清</string>
     <string name="show_picture_quality_720p">720P\n超清</string>
