--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="app_interactive_games">互动游戏</string>
     <string name="app_coming_soon">敬请期待</string>
     <string name="app_voice_chat_spatial">空间音频</string>
+    <string name="app_voice_chat_spatialTip">—空间音频模式</string>
 </resources>
