feat: add room expired

--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -177,3 +177,5 @@
 "Best Agora Sound" = "Agora Sound Selection";
 "Turn on AIAEC" = "Turn on AIAEC";
 "Turn on AGC" = "Turn on AGC";
+
+"DemoTestDesc" = "This product is for testing only, not for commerce.\nEvery room will be maintained for 20 minutes.";
