--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/en.lproj/Localizable.strings
@@ -5,9 +5,9 @@
   Created by 朱继超 on 2022/9/19.
   
 */
-"Agora Chat Room" = "Agora Chat Room";
+"Agora Chat Room" = "Spatial Audio Chat Mode Room";
 "All" = "All";
-"Chat Room" = "Chat Room";
+"Chat Room" = "Spatial Audio Chat Room";
 "Spatial Audio Mode Room" = "Spatial Audio Mode Room";
 "Private" = "Private";
 "Enter" = "Enter";
