--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -60,7 +60,10 @@
 "Anchor Invited You On-Stage"="房主邀请您上麦";
 "Decline"="拒绝";
 "Gifts"="打赏";
+"gifts"="打赏";
+"a rocket" = "一个火箭";
 "Contribution Total"="贡献总计";
+"Contribution List" = "贡献榜单";
 "Send"="发送";
 "Joined"="进入直播间";
 "Agora Blue"="Agora小蓝";
