--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -30,6 +30,7 @@
     <string name="app_logout">退出登录</string>
     <string name="app_logoff_account">注销账号</string>
     <string name="app_logoff">注销</string>
+    <string name="app_debug_mode">开发者模式</string>
 
     <string name="app_voice_chat">语聊房</string>
     <string name="app_show_live">秀场直播</string>
