--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -106,6 +106,7 @@
 "Set Room Name" = "设置房间名称";
 "Gaming Buddy"="游戏陪玩";
 "Social Chat"="语聊社交";
+"Beginner's Guide" = "如何使用";
 "active" = "激活";
 "blue" = "声蓝羽";
 "red" = "声红颜";
